done mobile desktop and react

--- a/src/style.scss
+++ b/src/style.scss
@@ -28,7 +28,7 @@ small {
 }
 .was-validated .form-control:invalid,
 .form-control.is-invalid {
-  background-image: url("./src/images/icon-error.svg");
+  background-image: url("./images/icon-error.svg");
 }
 button {
   border: none;
